--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,36 @@
+html,
+body {
+  height: 100%;
+}
+#root {
+  height: 100%;
+}
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.App > div {
+  flex: 1;
+  margin-bottom: 40px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 0;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.show-more {
+  flex: 1;
+  position: fixed;
+  bottom: 0;
+  height: 40px;
+  width: 100%;
+  cursor: pointer;
+  background: #cb4e4e;
+  color: #fff;
+  box-shadow: 0 6px #ab3c3c;
+  padding: 0;
+  border: 0;
+  font-size: 25px;
+  font-weight: bold;
 }
